[project]
name = "diet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==2.3.3",
    "flask-bcrypt==1.0.1",
    "flask-cors==4.0.0",
    "flask-sqlalchemy==3.0.5",
    "google-generativeai==0.3.2",
    "numpy==1.24.3",
    "opencv-python==4.8.1.78",
    "openpyxl==3.1.2",
    "pandas==2.0.3",
    "pillow==10.0.1",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "transformers==4.33.2",
    "werkzeug==2.3.7",
]
